# ExeLaunchHandler

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  app.cpp  app.h  global_error_handler.cpp  global_error_handler.h  installer_script.iss  main.cpp
config/: AppConfig.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  export.h
config/converting/: ISerializer.h  JsonSerializer.cpp  JsonSerializer.h
constants/: CMakeLists.txt  Priority.cpp  Priority.h  WarnLevels.cpp  WarnLevels.h  export.h
launch/: CMakeLists.txt  ProcessLauncher.cpp  ProcessLauncher.h  export.h
logging/: CMakeLists.txt  Logger.cpp  Logger.h  export.h
logging/log_message_builders/: LineMessageBuilder.cpp  LineMessageBuilder.h
pipes/: CMakeLists.txt  IPipe.h  IPipeline.h  Pipe.cpp  Pipe.h  PipelineSync.cpp  PipelineSync.h  export.h
python_bridge/: Adapter.cpp  Adapter.h  CMakeLists.txt  PythonPipeRegistry.cpp  PythonPipeRegistry.h  export.h
python_bridge/definitions/: CMakeLists.txt  export_logger.h  python_pipe.h  register_pipe_fun.h
python_bridge/src/: Adapter.cpp  Adapter.h
python_bridge/src/internal/: FuncDefinition.cpp  PipeDefinition.h  PythonPipeRegistry.cpp  PythonPipeRegistry.h
python_bridge/src/internal/definitions/: export_logger.h  module.cpp  python_pipe.h  register_pipe_fun.h
results_api/: CMakeLists.txt  Result.cpp  Result.h  ResultBase.cpp  ResultBase.h  Status.h  export.h
ui/: CMakeLists.txt  export.h
ui/config_managment_widget/: configtab.cpp  configtab.h  configtab.ui
ui/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/pipes_tab/: pipestab.cpp  pipestab.h  pipestab.ui
ui/splash_screen/: SplashScreenWrapper.cpp  SplashScreenWrapper.h
ui/warnings/: ErrorDisplay.cpp  ErrorDisplay.h
